# eve

docs/reference/functions/: decorator.html
docs/reference/functions/decorator/: narrow.html  promote.html
docs/reference/src/: narrow.src.html  promote.src.html
include/eve/: product_type.hpp
include/eve/algo/: reduce2.hpp
include/eve/arch/: cardinals.hpp
include/eve/arch/cpu/: base.hpp  wide.hpp
include/eve/complex/: complex.hpp
include/eve/concept/: vectorized.hpp
include/eve/detail/: callable.hpp
include/eve/function/: abs.hpp  add.hpp  am.hpp  bit_ternary.hpp  converting.hpp  decorator.hpp  exp.hpp  heuman_lambda.hpp  imag.hpp  jacobi_elliptic.hpp  jacobi_zeta.hpp  narrow.hpp  numeric.hpp  pedantic.hpp  promote.hpp  properties.hpp  raw.hpp  real.hpp  saturated.hpp
include/eve/module/elliptic/regular/: am.hpp  elliptic.hpp  heuman_lambda.hpp  (+2 more)
test/doc/core/: CMakeLists.txt  add.cpp  converting.cpp  narrow.cpp  promote.cpp
test/doc/elliptic/: CMakeLists.txt  heuman_lambda.cpp  jacobi_elliptic.cpp  jacobi_zeta.cpp
test/tts/: tts.hpp
test/unit/memory/: CMakeLists.txt
test/unit/module/: CMakeLists.txt
test/unit/module/complex/: CMakeLists.txt  complex.cpp
test/unit/module/complex/core/: CMakeLists.txt
test/unit/module/core/abs/saturated/: abs.hpp
test/unit/module/elliptic/: CMakeLists.txt  am.cpp  heuman_lambda.cpp  jacobi_elliptic.cpp  jacobi_zeta.cpp
test/unit/module/math/exp/regular/: exp.hpp
test/unit/module/real/core/: CMakeLists.txt  bit_ternary.cpp
test/unit/module/real/core/converting/regular/: converting.hpp
(+14 files in other folders)
