##==================================================================================================
##  EVE - Expressive Vector Engine
##  Copyright : EVE Contributors & Maintainers
##  SPDX-License-Identifier: MIT
##==================================================================================================
add_custom_target(unit.complex.simd.exe              )
add_dependencies (unit.simd.exe unit.complex.simd.exe)

##==================================================================================================
## complex data structure test
##==================================================================================================
make_unit("unit.complex"  complex.cpp  )

##==================================================================================================
## complex functions
##==================================================================================================
add_subdirectory(core)
